syntax = "proto3";

package storage;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/tasks/storage/protos";

////////////////////////////////////////////////////////////////////////////////

message StringMap {
    map<string, string> Values = 1;
}
