syntax = "proto3";

package yandex.mdb.cms.v1;
option go_package = "a.yandex-team.ru/cloud/mdb/cms/api/grpcapi/v1;cmsv1";

import "google/rpc/status.proto";
import "google/protobuf/timestamp.proto";

message InstanceOperation {
    string id = 1;
    string instance_id = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp modified_at = 4;
    string created_by = 5;

    string status_message = 6; // Human readable status. ex: Awaiting lock, Whipping masters away 2 success, 1 in progress, etc
    google.protobuf.Timestamp delivery_estimation = 7;

    google.rpc.Status error = 8; // for error and cancellation
    enum Status {
        STATUS_UNKNOWN = 0;
        ERROR = 1;
        PROCESSING = 3;
        OK = 2; // only this status means that Operation if finally OK. If Operation is not OK you should wait.
    }
    Status status = 9;
    enum StepName {
        STEP_UNKNOWN = 0;
        WHIP_MASTER = 1;
        CHECK_IF_PRIMARY = 2;
    }
    repeated StepName executed_steps = 10;
}
